tenant-a-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"task-app","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"task-app"}},"template":{"metadata":{"labels":{"app":"task-app"}},"spec":{"containers":[{"image":"blackdocker01/task-app:latest","name":"task-app","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: "2026-02-06T14:15:39Z"
  generation: 2
  name: task-app
  namespace: tenant-a
  resourceVersion: "77841"
  uid: a4f13ca2-267e-41ed-b214-5f5460e2b31f
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: task-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-02-06T14:32:02Z"
      labels:
        app: task-app
    spec:
      containers:
      - image: blackdocker01/task-app:latest
        imagePullPolicy: Always
        name: task-app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
